kubernetes/product/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: product-service
  name: product-service
spec:
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
